fix(rb-popover): inside content from getting cut off

--- a/src/client/styles/layout/host.scss
+++ b/src/client/styles/layout/host.scss
@@ -2,7 +2,9 @@
  * HOST
  *******/
 :host {
-	contain: content;
+	// paint prevents popover inside
+	// content from being over everything
+	contain: layout style;
 	display: block;
 	margin-bottom: 1rem;
 }
